# rule-evaluator

./: CMakeLists.txt  evaluator.cpp  evaluator.h  evaluator.y++
